## Process this file with automake to produce Makefile.in

EXTRA_DIST = oggz_off_t_generated.h.in

# Include files to install
oggzincludedir = $(includedir)/oggz
oggzinclude_HEADERS = \
	oggz.h \
	oggz_comments.h \
	oggz_constants.h \
	oggz_io.h \
	oggz_read.h \
	oggz_seek.h \
	oggz_stream.h \
	oggz_packet.h \
	oggz_table.h \
	oggz_write.h \
	oggz_deprecated.h \
	oggz_off_t.h \
	oggz_off_t_generated.h

BUILT_SOURCES = oggz_off_t_generated.h
